fix(web): tweak pixel spacing to be compliant with Abstract design

--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -9,3 +9,9 @@
     @content;
   }
 }
+
+@mixin mobile-only {
+  @media only screen and (max-width: 640px) {
+    @content;
+  }
+}
